@@ -143,7 +143,7 @@
 	USECODE_INTRINSIC_PTR(advance_time),	// 0x78
 	USECODE_INTRINSIC_PTR(in_usecode),	// 0x79
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x7a
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0x7b ++++Another sprite animation?
+	USECODE_INTRINSIC_PTR(npc_sprite_effect),// 0x7b
 	USECODE_INTRINSIC_PTR(attack_avatar),	// 0x7c
 	USECODE_INTRINSIC_PTR(path_run_usecode),	// 0x7d
 	USECODE_INTRINSIC_PTR(close_gumps),	// 0x7e
