@@ -1315,10 +1315,25 @@ USECODE_INTRINSIC(add_spell)
 USECODE_INTRINSIC(sprite_effect)
 {
 	// Display animation from sprites.vga.
-	// show_sprite(sprite#, tx, ty, tz, ?, ?, ?);
+	// show_sprite(sprite#, tx, ty, dx, dy, frame, length??);
+					// ++++++Pass frame, length+++++++
 	gwin->add_effect(new Sprites_effect(parms[0].get_int_value(),
 		Tile_coord(parms[1].get_int_value(), parms[2].get_int_value(),
-					parms[3].get_int_value())));
+									0),
+			parms[3].get_int_value(), parms[4].get_int_value()));
+	return(no_ret);
+}
+
+USECODE_INTRINSIC(npc_sprite_effect)
+{
+	// npc_sprite_effect(npc, sprite#, xoff, yoff, dx, dy, frame, length??)
+	Actor *npc = as_actor(get_item(parms[0]));
+	if (npc)
+					// ++++++Pass frame, length+++++++
+		gwin->add_effect(new Sprites_effect(parms[1].get_int_value(),
+			npc,
+			parms[2].get_int_value(), parms[3].get_int_value(),
+			parms[4].get_int_value(), parms[5].get_int_value()));
 	return(no_ret);
 }
 
